fix for view height on mobile

--- a/client/src/pages/Login/login.scss
+++ b/client/src/pages/Login/login.scss
@@ -21,7 +21,7 @@
 
 .login {
   @include themify($themes) {
-    height: 100lvh;
+    height: 100svh;
     display: flex;
     align-items: center;
     justify-content: center;
