--- a/client/src/pages/Register/register.scss
+++ b/client/src/pages/Register/register.scss
@@ -21,7 +21,7 @@
 
 .register {
   @include themify($themes) {
-    height: 100vh;
+    height: 100svh;
     display: flex;
     align-items: center;
     justify-content: center;
